RESOLVED FIXED12870
REGRESSION: Safari accepts and attempts to load any file dragged into it
https://bugs.webkit.org/show_bug.cgi?id=12870
Summary REGRESSION: Safari accepts and attempts to load any file dragged into it
Matt Lilek
Reported 2007-02-23 08:23:52 PST
Safari now claims to accept (shows the cursor with the green + orb) and seems to try to load anything dragged into it - things like application bundles, folders or zip files. The title is blanked and history functionality for that tab/window is dead.
Attachments
instamatic fix (2.06 KB, patch)
2007-02-23 17:21 PST, Oliver Hunt
aroben: review+
Oliver Hunt
Comment 1 2007-02-23 17:21:10 PST
Created attachment 13356 [details] instamatic fix Okay, the problem is that the drag and drop code had an "improvement" that short circuited the evaluation of _web_best_URL if the dragging Pasteboard contained any url. _web_best_URL filters out insane URLs (eg. directories) so this was bad. This fix stops directories from being accepted. All other files are accepted, and will bring up the finder if the dropped file isn't viewable with webkit.
Adam Roben (:aroben)
Comment 2 2007-02-23 17:29:17 PST
Comment on attachment 13356 [details] instamatic fix + Drag a file that WebKit doesn't recognise -- eg. a disk image, tarball, etc.<p> Would be better to either wrap this in a <p></p> pair, or use <br> r=me
Oliver Hunt
Comment 3 2007-02-23 17:39:06 PST
Landed in r19382 (ChangeLog corrected in r19833 *sigh*)
Note You need to log in before you can comment on or make changes to this bug.