2007-02-23  Oliver Hunt  <oliver@apple.com>

Reviewed by Adam.

        Fix for http://bugs.webkit.org/show_bug.cgi?id=12870

        It turns out short circuiting DragData::containsURL() was bad

        * ChangeLog:
        * WebCore.xcodeproj/project.pbxproj:
        * manual-tests/directory-drop-on-view.html: Added.
        * platform/mac/DragDataMac.mm:
        (WebCore::DragData::containsURL):



Canonical link: https://commits.webkit.org/16673@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@19832 268f45cc-cd09-0410-ab3c-d52691b4dbfc